Refactor routers out, reorganize modules.

--- a/priv/index.html
+++ b/priv/index.html
@@ -17,7 +17,9 @@
     <p id='user-info' class='navbar-content'></p>
   </nav>
   <div id='app' class='row'>
-    <div id='main' class='col-md-9 col-md-push-3'>
+    <div class='col-md-9 col-md-push-3'>
+      <div id='main'></div>
+      <div id='bottom'></div>
     </div>
     <aside id='sidebar' class='col-md-3 col-md-pull-9'>
     </aside>
