--- a/priv/index.html
+++ b/priv/index.html
@@ -49,6 +49,17 @@
     </div>
   </script>
 
+  <script id='reply-template' type='text/html'>
+    <div class='panel-body'>
+      <div class='input-group'>
+        <input type='text' class='form-control body'>
+        <span class='input-group-btn'>
+          <button class='btn btn-primary' type='button'>Send</button>
+        </span>
+      </div>
+    </div>
+  </script>
+
   <script src='/static/vendor/js/requirejs/require.js' data-main='/static/js/main.js'></script>
 </body>
 </html>
